Move most of the code to Checker Framework.